--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,11 +37,13 @@
   </div>
       
 </nav>
+<div>
     <form action="/criar-usuario" method="POST">
         <input type="text" placeholder="email" name="email"><br />
         <input type="password" placeholder="senha" name="password"> <br />
         <button type="submit">Criar</button>
     </form>
+</div>
 <footer class="footer fixed-bottom">
             <div class="container">
                 <span class="text-muted">Desenvolvido por Eduardo Baranowski</span>
