--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,6 +37,7 @@
   </div>
       
 </nav>
+<nav>
 <div>
     <form action="/criar-usuario" method="POST">
         <input type="text" placeholder="email" name="email"><br />
@@ -44,6 +45,7 @@
         <button type="submit">Criar</button>
     </form>
 </div>
+</nav>
 <footer class="footer fixed-bottom">
             <div class="container">
                 <span class="text-muted">Desenvolvido por Eduardo Baranowski</span>
