--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,15 +37,13 @@
   </div>
       
 </nav>
-<nav>
-<div>
+<main role="main" class="container">
     <form action="/criar-usuario" method="POST">
         <input type="text" placeholder="email" name="email"><br />
         <input type="password" placeholder="senha" name="password"> <br />
         <button type="submit">Criar</button>
     </form>
-</div>
-</nav>
+</main>
 <footer class="footer fixed-bottom">
             <div class="container">
                 <span class="text-muted">Desenvolvido por Eduardo Baranowski</span>
