--- a/src/views/comofunciona.html
+++ b/src/views/comofunciona.html
@@ -1,3 +1,12 @@
 {% extends 'index.html' %}
 {% block conteudo %}
+
+<main role="main" class="jumbotron">
+    <div class="container">  
+      <h1 align="center">Sorteio de Automóveis!</h1>  
+      <div align="center"><!--<img id = "imagem" src="../static/1.png" width="420" height="438" alt="My image"/>--></a></div>
+      <h2>Você compra uma cartela do sorteio que lhe concede um conjunto de números. Após vender o número mínimo dentro do prazo o sorteio ocorre. Os número da cartela são de acordo com os números da loteria e se você vencer o automóvel é seu!</h2>
+    </div>
+</main>  
+
 {% endblock %}
