--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -3,85 +3,82 @@
 {% block conteudo %}
 
   
-  <main role="main" class="jumbotron">
-    <div class="container">  
-      <h1 align="center">Cartelas Disponíveis!</h1>  
-        <table class="table table-striped">
+  <main role="main" class="container"> 
+      <h1 align="center">Cartelas Disponíveis!</h1>    
+        <table class="container" width="100px" border="2">
         <tbody>          
                 <tr>                
                 {% for i in range(15) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr> 
                 <tr>
                 {% for i in range(15, 30) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>
                 <tr>
                 {% for i in range(30, 45) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>
                 <tr>
                 {% for i in range(45, 60) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                   
                 <tr>
                 {% for i in range(60, 75) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                             
                 <tr>
                 {% for i in range(75, 90) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                   
                 <tr>
                 {% for i in range(90, 105) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}                
                 </tr>     
                 <tr>
                 {% for i in range(105, 120) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                            
                 <tr>
                 {% for i in range(120, 135) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                     
                 <tr>
                 {% for i in range(135, 150) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                     
                 <tr>
                 {% for i in range(150, 165) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                     
                 <tr>
                 {% for i in range(165, 180) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                     
                 <tr>
                 {% for i in range(180, 195) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                     
                 <tr>
                 {% for i in range(195, 210) %}
-                <td> <button type="submit">{{i+1}}</button> </td>
+                <td align="center"> <button style="height:36px;width:47px" type="submit">{{i+1}}</button> </td>
                 {%endfor%}
                 </tr>                                                                                                             
         </tbody>
         </table>
-      <div align="center"></div>
-    </div>
   </main>  
 
 
