rota faltando imagens1

--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -5,7 +5,7 @@
   
   <main role="main" class="container"> 
       <h1 align="center">Cartelas Disponíveis!</h1>    
-        <table class="container" width="100px" border="2">
+        <table class="container" width="100px" >
         <tbody>          
                 <tr>                
                 {% for i in range(15) %}
