--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -3,8 +3,8 @@
 <main role="main" class="jumbotron">
     <div class="container">  
       <h1 align="center">Responsável: Caroline Baranowski</h1>  
-      <h3><a style="color:red" href="https://www.instagram.com/carolinebaranowski.financas/">Instagram</a></h3>
-      <h3><a style="color:red" href="https://www.facebook.com/caroline.baranowski.1">Facebook</a></h3>
+      <h3><a style="color:brown" href="https://www.instagram.com/carolinebaranowski.financas/">Instagram</a></h3>
+      <h3><a style="color:brown" href="https://www.facebook.com/caroline.baranowski.1">Facebook</a></h3>
     </div>
 </main>  
 
