--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -81,6 +81,13 @@
         </tbody>
         </table>
   </main>  
-
+  <br>
+<br>
+<h1><span>Pagamento</span></h1>
+<h2 style="color:brown">Agência: </h2>
+<h2 style="color:brown">Conta: </h2>
+<h2 style="color:brown">Favorecido: </h2>
+<br>
+<br>
 
 {% endblock %}
