--- a/src/views/home.html
+++ b/src/views/home.html
@@ -44,9 +44,9 @@
   <div class="container">   
   <br>
   <br>
-   
+
       <h1>Oportunidade de Adquirir seu Automóvel!</h1>
-      <p style="color:brown" class="lead">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </p>
+      <h3 style="color:brown" class="lead">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
       <a class="btn btn-lg btn-primary" href="compreasua" role="button">Clique para mais informações &raquo;</a>
   </div>
 <footer class="footer fixed-bottom">
