--- a/src/views/comofunciona.html
+++ b/src/views/comofunciona.html
@@ -7,6 +7,7 @@
       <h1 align="center">Sorteio de Automóveis!</h1>  
       <div align="center"><!--<img id = "imagem" src="../static/1.png" width="420" height="438" alt="My image"/>--></a></div>
       <h2 style="color:brown">Você compra uma cartela do sorteio que lhe concede um conjunto de números. Após vender o número mínimo dentro do prazo o sorteio ocorre. Os número da cartela são de acordo com os números da loteria e se você vencer o automóvel é seu!</h2>
+      <a class="btn btn-lg btn-primary" href="compreasua" role="button">Compre sua cartela &raquo;</a>
     </div>
 </main>  
 
