--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -81,13 +81,14 @@
         </tbody>
         </table>
   </main>  
-  <br>
+<main role="main" class="container" align="center">
 <br>
 <h1><span>Pagamento</span></h1>
 <h2 style="color:brown">Agência: </h2>
 <h2 style="color:brown">Conta: </h2>
 <h2 style="color:brown">Favorecido: </h2>
+<a class="btn btn-lg btn-primary" href="compreasua" role="button">Comprar &raquo;</a>
 <br>
 <br>
-
+</main>  
 {% endblock %}
