--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -4,9 +4,10 @@
   <br>
 <main role="main" class="jumbotron">
     <div class="container">  
-      <h1 align="center">Responsável: Caroline Baranowski</h1>  
-      <h3><a style="color:brown" href="https://www.instagram.com/carolinebaranowski.financas/">Instagram</a></h3>
-      <h3><a style="color:brown" href="https://www.facebook.com/caroline.baranowski.1">Facebook</a></h3>
+      <h1 align="center">Responsável: Caroline Baranowski</h1>      
+      <h3><a class="btn btn-lg btn-primary" href="https://www.instagram.com/carolinebaranowski.financas/" role="button">Instagram &raquo;</a></h3>
+      <br>
+      <h3><a class="btn btn-lg btn-primary" href="https://www.facebook.com/caroline.baranowski.1" role="button">Facebook &raquo;</a></h3>
     </div>
 </main>  
 
