alterando URL de conexao do mongo atlas

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -32,23 +32,29 @@
   </div>
       
 </nav>
-<!--
-<main role="main" class="container">
+
+
+
+  <div class="container">   
+    <main role="main" class="jumbotron">
+      <h1>Oportunidade de Adquirir seu Automóvel!</h1>
+      <h3 style="color:brown" class="lead">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
+      <br>
+    <div class="container">    
+      <div align="center"><img id = "imagem" src="/static/1.jpg"  alt="My image"/></a></div>
+      <br>
+      <a class="btn btn-lg btn-primary" href="comofunciona" role="button">Clique para mais informações &raquo;</a>
+    </div>
+  </main>  
+
+  </div>
+  <main role="main" class="container">
     <form action="/criar-usuario" method="POST">
         <input type="text" placeholder="email" name="email"><br />
         <input type="password" placeholder="senha" name="password"> <br />
         <button type="submit">Criar</button>
     </form>
 </main>
--->
-  <div class="container">   
-  <br>
-  <br>
-
-      <h1>Oportunidade de Adquirir seu Automóvel!</h1>
-      <h3 style="color:brown" class="lead">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
-      <a class="btn btn-lg btn-primary" href="comofunciona" role="button">Clique para mais informações &raquo;</a>
-  </div>
 <footer class="footer fixed-bottom">
             <div class="container">
                 <span class="text-muted">Desenvolvido por Eduardo Baranowski</span>
