--- a/src/views/home.html
+++ b/src/views/home.html
@@ -35,17 +35,25 @@
 
 
 
-  <div class="container">   
+    
     <main role="main" class="jumbotron">
-      <h1>Oportunidade de Adquirir seu Automóvel!</h1>
-      <h3 style="color:brown" class="lead">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
-      <br>
-    <div class="container">    
+    <div class="container"> 
+      <h1 align="center">Oportunidade de Adquirir seu Automóvel!</h1>
+      <h3 style="color:brown" class="lead" align="center">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
+  
       <div align="center"><img id = "imagem" src="/static/1.jpg"  alt="My image"/></a></div>
       <br>
-      <a class="btn btn-lg btn-primary" href="comofunciona" role="button">Clique para mais informações &raquo;</a>
+      <div align="center"><a class="btn btn-lg btn-primary" href="comofunciona" role="button" align="center">Clique para mais informações &raquo;</a></div>
     </div>
   </main>  
+<!--
+  {% for button in buttons %}
+    if button.required
+      <button class="desabilitado">Teste</button>
+    else
+    <button >Teste</button>
+
+  {% endfor %}
 
   </div>
   <main role="main" class="container">
@@ -55,6 +63,7 @@
         <button type="submit">Criar</button>
     </form>
 </main>
+-->
 <footer class="footer fixed-bottom">
             <div class="container">
                 <span class="text-muted">Desenvolvido por Eduardo Baranowski</span>
