--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -92,6 +92,15 @@
         </tbody>
         </table>
   </main>  
+  <!--
+    {% for button in buttons %}
+     if button.required
+        <button class="desabilitado">Teste</button>
+      else
+        <button >Teste</button>
+
+    {% endfor %}
+    -->
 <main role="main" class="container" align="center">
 <br>
 <h1><span>Pagamento</span></h1>
