--- a/src/views/home.html
+++ b/src/views/home.html
@@ -43,17 +43,11 @@
   
       <div align="center"><img id = "imagem" src="/static/1.jpg"  alt="My image"/></a></div>
       <br>
-      <div align="center"><a class="btn btn-lg btn-primary" href="comofunciona" role="button" align="center">Clique para mais informações &raquo;</a></div>
+      <div align="center"><a class="btn btn-lg btn-primary" href="comofunciona" role="button" align="center">Clique para mais informações &raquo;</a>
     </div>
   </main>  
 <!--
-  {% for button in buttons %}
-    if button.required
-      <button class="desabilitado">Teste</button>
-    else
-    <button >Teste</button>
 
-  {% endfor %}
 
   </div>
   <main role="main" class="container">
