--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -104,9 +104,10 @@
 <main role="main" class="container" align="center">
 <br>
 <h1><span>Pagamento</span></h1>
-<h2 style="color:brown">Agência: </h2>
-<h2 style="color:brown">Conta: </h2>
-<h2 style="color:brown">Favorecido: </h2>
+<h2 style="color:brown">Banco Inter</h2>
+<h2 style="color:brown">Agência: 0001</h2>
+<h2 style="color:brown">Conta: 1924306-5</h2>
+<h2 style="color:brown">Favorecido: Caroline Miranda Baranowski</h2>
 <a class="btn btn-lg btn-primary" href="compreasua" role="button">Comprar &raquo;</a>
 <br>
 <br>
