--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -8,7 +8,7 @@
   .grid-container {
     display: inline-grid;
     grid-template-columns: auto auto auto;
-    background-color: #2196F3;
+    background-color: ;
     padding: 10px;
   }
 
@@ -126,7 +126,7 @@
     <h2 style="color:brown">Conta: 1924306-5</h2>
     <h2 style="color:brown">Favorecido: Caroline Miranda Baranowski</h2>
   </div>
-  <div class="grid-item">2
+  <div class="grid-item">
     <h2 style="color:brown">Banco Santander</h2>
     <h2 style="color:brown">Agência: 3731</h2>
     <h2 style="color:brown">Conta: 01041897-8</h2>
