--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -136,7 +136,7 @@
 <br>
 <br>
 
-<a class="btn btn-lg btn-primary" href="compreasua" role="button">Comprar &raquo;</a>
+<a class="btn btn-lg btn-primary" href="/cadastro" role="button">Comprar &raquo;</a>
 <br>
 <br>
 </main>  
