--- a/src/views/createUser.html
+++ b/src/views/createUser.html
@@ -6,7 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <p>{{user.nome}}</p>
+    <p>{{user.dataNascimento}}</p>
+    <p>{{user.naturalidade}}</p>
+    <p>{{user.cpf}}</p>
     <p>{{user.email}}</p>
-    <p>{{user.password}}</p>
+    <p>{{user.celular}}</p>
+    <p>{{user.residencial}}</p>
+    <p>{{user.cep}}</p>
+    <p>{{user.estado}}</p>
+    <p>{{user.cidade}}</p>
+    <p>{{user.bairro}}</p>
+    <p>{{user.rua}}</p>    
+    <p>{{user.numero}}</p>
+    <p>{{user.complemento}}</p>
+    <p>{{user.escolhidos}}</p>               
 </body>
 </html>
