--- a/src/views/cadastroParaCompra.html
+++ b/src/views/cadastroParaCompra.html
@@ -17,7 +17,7 @@
         display: block;
         margin-bottom: 10px;
     }
-    </style>
+    </style>   
     <main role="main" class="jumbotron">
     <h1>Dados cadastrais</h1>
     <h5>Preencha o formulário com os seus dados para o cadastro. Campos com * são obrigatórios!</h5>
@@ -74,6 +74,7 @@
     <br><br>    
     <h6>* Os dados coletados aqui serão enviados para a base de dados uníca e exclusivamente para realizar o sorteio.
 ** Não informe senhas pelos formulários!</h6>             
-    <button type="submit">Enviar formulário</button>
+    
+    <button type="submit" value="anonymous function" onclick="sucesso()">Enviar formulário</button>
 </main>
 {% endblock %}
