--- a/src/views/home.html
+++ b/src/views/home.html
@@ -36,14 +36,18 @@
 
 
     
-    <main role="main" class="jumbotron">
+  <main role="main" class="jumbotron">
+  <div class="container">
     <div class="container"> 
-      <h1 align="center">Oportunidade de Adquirir seu Automóvel!</h1>
-      <h3 style="color:brown" class="lead" align="center">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
+        <h1 align="center">Oportunidade de Adquirir seu Automóvel!</h1>
+        <h3 style="color:brown" class="lead" align="center">Se você deseja enfim realizar o sonho de ter seu altomóvel essa é sua oportunidade.<br> Para participar é muito simples, você compra uma cartela e concorre! </h3>
   
-      <div align="center"><img id = "imagem" src="/static/1.jpg"  alt="My image"/></a></div>
-      <br>
-      <div align="center"><a class="btn btn-lg btn-primary" href="comofunciona" role="button" align="center">Clique para mais informações &raquo;</a>
+        <img id = "imagem" src="/static/1.jpg" style="width:100%" alt="My image"/>
+        <br>
+        <div align="center">
+         <a class="btn btn-lg btn-primary" href="comofunciona" role="button" align="center">Clique para mais informações &raquo;</a>
+        </div>
+      </div>
     </div>
   </main>  
 <!--
