--- a/src/views/cadastroParaCompra.html
+++ b/src/views/cadastroParaCompra.html
@@ -75,6 +75,6 @@
     <h6>* Os dados coletados aqui serão enviados para a base de dados uníca e exclusivamente para realizar o sorteio.
 ** Não informe senhas pelos formulários!</h6>             
     
-    <button type="submit" value="anonymous function" onclick="sucesso()">Enviar formulário</button>
+    <button type="submit" >Enviar formulário</button>
 </main>
 {% endblock %}
