--- a/src/views/compreasua.html
+++ b/src/views/compreasua.html
@@ -137,6 +137,7 @@
 <br>
 
 <a class="btn btn-lg btn-primary" href="/cadastro" role="button">Comprar &raquo;</a>
+<a class="btn btn-lg btn-primary" href="/comprovante" role="button">Já pagou e quer enviar o comprovante? Clique aqui! &raquo;</a>
 <br>
 <br>
 </main>  
