--- a/src/views/comprovanteSucesso.html
+++ b/src/views/comprovanteSucesso.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
   <main role="main" class="jumbotron">
     <div  align="center" class="container">    
-      <h1>Dados cadastrados com sucesso! Encaminharemos sua cartela ao seu email quando o pagamento for efetivado!</h1>  
+      <h1>Dados enviados com sucesso! Encaminharemos sua cartela ao seu email quando o pagamento for verificado!</h1>  
     </div>
   </main>    
 {% endblock %}
