--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -6,7 +6,7 @@
     <div class="container">  
       <h1 align="center">Responsável: Caroline Baranowski</h1>  
       <br>    
-      <h3 align="center"><a class="btn btn-lg btn-primary" href="https://www.instagram.com/carolinebaranowski.financas/" role="button">Instagram &raquo;</a></h3>
+      <h3 align="center"><a class="btn btn-lg btn-primary" href="https://www.instagram.com/carolinebaranowskii/" role="button">Instagram &raquo;</a></h3>
       <br>
       <h3 align="center"><a class="btn btn-lg btn-primary" href="https://www.facebook.com/caroline.baranowski.1" role="button">Facebook &raquo;</a></h3>
     </div>
